--- a/index.html
+++ b/index.html
@@ -13,49 +13,65 @@
     <script src="js/scripts.js"></script>
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Contact Management System - Home</title>
+    <title>Home</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <main>
-    <nav>
-      <div class="nav-wrapper teal lighten-2">
-        <a href="#" class="brand-logo"><img src="images/h&s.png" />H&S Travel - Contact Management System</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="index.html">Contacts</a></li>
-          <li><a href="add_contact.html">Add Contacts</a></li>
-        </ul>
-      </div>
-    </nav>
-
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper teal lighten-2">
+          <a href="#" class="brand-logo">
+            <img src="images/h&s.png" />
+            H&S Travel - Contact Management System
+          </a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="index.html">Contacts</a></li>
+            <li><a href="add_contact.html">Add Contacts</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    
     <div class="container">
-      <h2 class="center">All Contacts</h2>
-      <table class="contacts striped">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>Notes</th>
-            <th>Edit</th>
-          </tr>
-        </thead>
+      <div class="row">
+        <div class="col s12">
+          <h2 class="center">All Contacts</h2>
+        </div>
+      </div>
 
-        <tbody class="contacts tbody">
-        </tbody>
-      </table>
+      <div class="row">
+        <div class="col s12">
+          <table class="contacts striped">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Notes</th>
+                <th colspan="3">Options</th>
+              </tr>
+            </thead>
+            <tbody class="contacts tbody">
+              <!-- To be set by JavaScript -->
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </main>
 
   <footer class="page-footer teal lighten-2">
-    <div class="footer-copyright teal lighten-2">
-      <div class="container">
-        © 2023 H&S Travel
-        <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com"
-          >Email Us</a
-        >
+    <div class="container">
+      <div class="row">
+        <div class="col s6">
+          © 2023 H&S Travel
+        </div>
+        <div class="col s6">
+          <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com">Email Us</a>
+        </div>
       </div>
     </div>
   </footer>
