add addContact function

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             H&S Travel - Contact Management System
           </a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="index.html">Contacts</a></li>
-            <li><a href="add_contact.html">Add Contacts</a></li>
+            <li><a href="index.html">All Contacts</a></li>
+            <li><a href="add.html">Add Contacts</a></li>
           </ul>
         </div>
       </nav>
