--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper teal lighten-2">
-          <a href="#" class="brand-logo">
+          <a href="index.html" class="brand-logo">
             <img src="images/h&s.png" />
             H&S Travel - Contact Management System
           </a>
@@ -51,7 +51,7 @@
                 <th>Email</th>
                 <th>Phone</th>
                 <th>Notes</th>
-                <th colspan="3">Options</th>
+                <th colspan="2">Options</th>
               </tr>
             </thead>
             <tbody class="contacts tbody">
