--- a/view.html
+++ b/view.html
@@ -13,7 +13,7 @@
     <script src="js/scripts.js"></script>
 
     <link rel="stylesheet" href="css/style.css" />
-    <title>Add Contact</title>
+    <title>View Contact</title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -33,52 +33,51 @@
       </nav>
     </div>
 
-    <div class="container">
-      <h3 class="center">Add Contact</h3>
+    <div class="container contact">
+      <h3 class="center">View Contact</h3>
         <div class="row">
-          <form class="col s12" onsubmit="add_contact()">
+          <form class="col s12" id="update_contact_form">
             <div class="row">
               <div class="input-field col s6">
                 <input id="first_name" type="text" class="validate" data-length="25" required>
-                <label for="first_name">First Name (Required)</label>
+                <label class="active" for="first_name">First Name (Required)</label>
                 <span class="helper-text" data-error="Length must between 1 and 25"></span>
               </div>
               <div class="input-field col s6">
                 <input id="last_name" type="text" class="validate" data-length="25" required>
-                <label for="last_name">Last Name (Required)</label>
+                <label class="active" for="last_name">Last Name (Required)</label>
                 <span class="helper-text" data-error="Length must between 1 and 25"></span>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
                 <input id="email" type="email" class="validate" data-length="25" required>
-                <label for="email">Email (Required)</label>
+                <label class="active" for="email">Email (Required)</label>
                 <span class="helper-text" data-error="Invalid Email format or length"></span>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s6">
                 <input id="country_code" type="number" class="validate" data-length="3" required>
-                <label for="country_code">Country Code (Required)</label>
+                <label class="active" for="country_code">Country Code (Required)</label>
                 <span class="helper-text" data-error="Length must between 1 and 3"></span>
               </div>
               <div class="input-field col s6">
                 <input id="phone" type="number" class="validate" data-length="12" required>
-                <label for="phone">Phone (Required)</label>
+                <label class="active" for="phone">Phone (Required)</label>
                 <span class="helper-text" data-error="Length must between 1 and 12"></span>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
                 <textarea id="notes" class="materialize-textarea" data-length="255"></textarea>
-                <label for="notes">Notes (Optional)</label>
+                <label class="active" for="notes">Notes (Optional)</label>
                 <span class="helper-text" data-error="Length must between 0 and 255"></span>
               </div>
             </div>
             <div class="row">
               <div class="col s12">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
-                <button class="btn waves-effect waves-light" type="reset" name="action">Reset</button>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Save</button>
               </div>
             </div>
           </form>
