--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="row">
         <div class="col s12">
-          <table class="contacts striped">
+          <table class="contacts striped centered responsive-table">
             <thead>
               <tr>
                 <th>ID</th>
