add cancel button, update footer with my name

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row">
         <div class="col s6">
-          © 2023 H&S Travel
+          © 2023 Zhongyi Fu
         </div>
         <div class="col s6">
           <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com">Email Us</a>
