--- a/add.html
+++ b/add.html
@@ -78,6 +78,7 @@
               <div class="col s12">
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
                 <button class="btn waves-effect waves-light" type="reset" name="action">Reset</button>
+                <button class="btn waves-effect waves-light" type="button" onclick="location.replace('index.html')">Cancel</button>
               </div>
             </div>
           </form>
@@ -89,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col s6">
-          © 2023 H&S Travel
+          © 2023 Zhongyi Fu
         </div>
         <div class="col s6">
           <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com">Email Us</a>
