--- a/view.html
+++ b/view.html
@@ -77,6 +77,7 @@
             <div class="row">
               <div class="col s12">
                 <button class="btn waves-effect waves-light" type="submit" name="action">Save</button>
+                <button class="btn waves-effect waves-light" type="button" onclick="location.replace('index.html')">Cancel</button>
               </div>
             </div>
           </form>
@@ -88,7 +89,7 @@
     <div class="container">
       <div class="row">
         <div class="col s6">
-          © 2023 H&S Travel
+          © 2023 Zhongyi Fu
         </div>
         <div class="col s6">
           <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com">Email Us</a>
