update navbar, make it responsive

--- a/add.html
+++ b/add.html
@@ -18,20 +18,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <main>
-    <div class="navbar-fixed">
-      <nav>
-        <div class="nav-wrapper teal lighten-2">
-          <a href="index.html" class="brand-logo">
-            <img src="images/h&s.png" />
-            H&S Travel - Contact Management System
-          </a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="index.html">All Contacts</a></li>
-            <li><a href="add.html">Add Contacts</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
+    <nav>
+      <div class="navbar-fixed teal lighten-2">
+        <a href="index.html" class="brand-logo">
+          <img src="images/h&s.png" />
+          H&S Travel - Contact Management System
+        </a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="index.html">All Contacts</a></li>
+          <li><a href="add.html">Add Contacts</a></li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="sidenav teal lighten-2" id="mobile-demo">
+      <li><a href="index.html">All Contacts</a></li>
+      <li><a href="add.html">Add Contacts</a></li>
+    </ul>
 
     <div class="container">
       <h3 class="center">Add Contact</h3>
