fix error when browser width is smaller, title blocks add contact form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <nav>
       <div class="navbar-fixed teal lighten-2">
-        <a href="index.html" class="brand-logo">
+        <a href="index.html" class="brand-logo" id="brand-logo">
           <img src="images/h&s.png" />
           H&S Travel - Contact Management System
         </a>
