--- a/add.html
+++ b/add.html
@@ -20,7 +20,7 @@
   <main>
     <nav>
       <div class="navbar-fixed teal lighten-2">
-        <a href="index.html" class="brand-logo">
+        <a href="index.html" class="brand-logo" id="brand-logo">
           <img src="images/h&s.png" />
           H&S Travel - Contact Management System
         </a>
