update mailto email

--- a/view.html
+++ b/view.html
@@ -95,7 +95,7 @@
           © 2023 Zhongyi Fu
         </div>
         <div class="col s6">
-          <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:itdesk@hstravel.com">Email Us</a>
+          <a class="grey-text text-lighten-4 right" target="_blank" href="mailto:z.fu177@mybvc.ca">Email Us</a>
         </div>
       </div>
     </div>
